# meow-cli

./: .gitignore  README.md  get_id.py  pyproject.toml  test_play.py
.github/workflows/: publish.yml
meowtv/: __init__.py  __main__.py  cli.py  config.py  crypto.py  downloader.py  favorites.py  models.py  player.py  proxy.py
meowtv/providers/: __init__.py  base.py  meowtoon.py  meowtv.py  meowverse.py  meowverse_old.py  proxy.py
scratch/: debug_key.py  debug_meowtv.py  test_fix.py  test_proxy.py
